--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -32,6 +32,8 @@ Added
 Changed
 ~~~~~~~
 
+- With QtWebEngine 6.7+, the `colors.webpage.darkmode.enabled` setting can now
+  be changed at runtime and supports URL patterns (#8182).
 - A few more completions will now match search terms in any order:
   `:quickmark-*`, `:bookmark-*`, `:tab-take` and `:tab-select` (for the quick
   and bookmark categories). (#7955)
