Fix handling of missing QtWebEngine resources
I was getting crash reports from someone about this. Not sure what's going wrong
there (hence the additional information in the exception).

What's clear however is that we're raising ParseError, but only handling that
when actually parsing. The code calling copy_/_find_webengine_resources only
handles OSError. So let's raise a FileNotFoundError instead.

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -51,6 +51,8 @@ Fixed
   bug.
 - Trying to use qutebrowser after it's been deleted/moved on disk (e.g. after a
   Python upgrade) should now not crash anymore.
+- When the QtWebEngine resources dir couldn't be found, qutebrowser now doesn't
+  crash anymore (but QtWebEngine still might).
 
 [[v3.1.1]]
 v3.1.1 (unreleased)
