--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -57,6 +57,8 @@ Fixed
   when we went to clear that, probably when leaving a mode. (#7901)
 - Worked around a minor issue around QTimers on Windows where the IPC server
   could close the socket early. (#8191)
+- The latest PDF.js release (v4.2.67) is now supported when backed by
+  QtWebEngine 6.6+ (#8170)
 
 [[v3.1.1]]
 v3.1.1 (unreleased)
