--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,16 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v3.2.1]]
+v3.2.1 (unreleased)
+-------------------
+
+Fixed
+~~~~~
+
+- When the selected Qt wrapper is unavailable, qutebrowser now again shows a
+  GUI error message instead of only an exception in the terminal.
+
 [[v3.2.0]]
 v3.2.0 (2024-06-03)
 -------------------
