--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -355,7 +355,7 @@
 |<<url.open_base_url,url.open_base_url>>|Open base URL of the searchengine if a searchengine shortcut is invoked without parameters.
 |<<url.searchengines,url.searchengines>>|Search engines which can be used via the address bar.
 |<<url.start_pages,url.start_pages>>|Page(s) to open at the start.
-|<<url.yank_ignored_parameters,url.yank_ignored_parameters>>|URL parameters to strip with `:yank url`.
+|<<url.yank_ignored_parameters,url.yank_ignored_parameters>>|URL parameters to strip when yanking a URL.
 |<<window.hide_decoration,window.hide_decoration>>|Hide the window decoration.
 |<<window.title_format,window.title_format>>|Format to use for the window title. The same placeholders like for
 |<<window.transparent,window.transparent>>|Set the main window background to transparent.
@@ -739,12 +739,12 @@ Default:
 * +pass:[xO]+: +pass:[cmd-set-text :open -b -r {url:pretty}]+
 * +pass:[xo]+: +pass:[cmd-set-text -s :open -b]+
 * +pass:[yD]+: +pass:[yank domain -s]+
-* +pass:[yM]+: +pass:[yank inline [{title}\]({url}) -s]+
+* +pass:[yM]+: +pass:[yank inline [{title}\]({url:yank}) -s]+
 * +pass:[yP]+: +pass:[yank pretty-url -s]+
 * +pass:[yT]+: +pass:[yank title -s]+
 * +pass:[yY]+: +pass:[yank -s]+
 * +pass:[yd]+: +pass:[yank domain]+
-* +pass:[ym]+: +pass:[yank inline [{title}\]({url})]+
+* +pass:[ym]+: +pass:[yank inline [{title}\]({url:yank})]+
 * +pass:[yp]+: +pass:[yank pretty-url]+
 * +pass:[yt]+: +pass:[yank title]+
 * +pass:[yy]+: +pass:[yank]+
@@ -4693,7 +4693,7 @@ Default: +pass:[https://start.duckduckgo.com]+
 
 [[url.yank_ignored_parameters]]
 === url.yank_ignored_parameters
-URL parameters to strip with `:yank url`.
+URL parameters to strip when yanking a URL.
 
 Type: <<types,List of String>>
 
