--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -46,6 +46,12 @@ Fixed
 v3.2.1 (unreleased)
 -------------------
 
+Changed
+~~~~~~~
+
+- Windows and macOS releases now bundle Qt 6.7.2, which includes security fixes
+  up to Chromium 125.0.6422.142.
+
 Fixed
 ~~~~~
 
