--- a/doc/install.asciidoc
+++ b/doc/install.asciidoc
@@ -45,7 +45,7 @@ by Debian's security support.
 It's recommended to <<tox,install qutebrowser in a virtualenv>> with a newer PyQt/Qt binary instead.
 If you need proprietary codec support or use an architecture not supported by Qt
 binaries, starting with Ubuntu 22.04 and Debian Bookworm, it's possible to
-install Qt 6 via apt. By using `mkvenv.py` with `--pyqt-type link` you get a
+install Qt 6 via apt. By using `scripts/mkvenv.py` with `--pyqt-type link` you get a
 newer qutebrowser running with:
 
 - Ubuntu 22.04, Linux Mint 21: QtWebEngine 6.2.4 (based on Chromium 90 from mid-2021)
@@ -64,9 +64,9 @@ Additional hints
   However, Qt 6.5 https://www.qt.io/blog/moving-to-openssl-3-in-binary-builds-starting-from-qt-6.5-beta-2[moved to OpenSSL 3]
   for its binary builds. Thus, you will either need to live with
   `:adblock-update` and `:download` being broken, or use `--pyqt-version 6.4` for
-  the `mkvenv.py` script to get an older Qt.
+  the `scripts/mkvenv.py` script to get an older Qt.
 - If running from git, run the following to generate the documentation for the
-  `:help` command (the `mkvenv.py` script used with a virtualenv install already does
+  `:help` command (the `scripts/mkvenv.py` script used with a virtualenv install already does
   this for you):
 +
 ----
@@ -398,7 +398,7 @@ location for a particular application, rather than being installed globally.
 The `scripts/mkvenv.py` script in this repository can be used to create a
 virtualenv for qutebrowser and install it (including all dependencies) there.
 The next couple of sections will explain the most common use-cases - run
-`mkvenv.py` with `--help` to see all available options.
+`scripts/mkvenv.py` with `--help` to see all available options.
 
 Getting the repository
 ~~~~~~~~~~~~~~~~~~~~~~
@@ -442,8 +442,8 @@ See the next section for an alternative install method which might help with
 those issues but result in an older Qt version.
 
 You can specify a Qt/PyQt version with the `--pyqt-version` flag, see
-`mkvenv.py --help` for a list of available versions. By default, the latest
-version which plays well with qutebrowser is used.
+`scripts/mkvenv.py --help` for a list of available versions. By default, the
+latest version which plays well with qutebrowser is used.
 
 NOTE: If the Qt smoke test fails with a _"This application failed to start
 because no Qt platform plugin could be initialized."_ message, most likely a
@@ -453,22 +453,24 @@ failed on ..._ line for details.
 Installing dependencies (system-wide Qt)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-Alternatively, you can use `mkvenv.py --pyqt-type link` to symlink your local
-PyQt/Qt install instead of installing PyQt in the virtualenv. However, unless
-you have a new QtWebKit or QtWebEngine available, qutebrowser will not work. It
-also typically means you'll be using an older release of QtWebEngine.
+Alternatively, you can use `scripts/mkvenv.py --pyqt-type link` to symlink
+your local PyQt/Qt install instead of installing PyQt in the virtualenv.
+However, unless you have a new QtWebKit or QtWebEngine available, qutebrowser
+will not work. It also typically means you'll be using an older release of
+QtWebEngine.
 
 On Windows, run `set PYTHON=C:\path\to\python.exe` (CMD) or `$Env:PYTHON =
 "..."` (Powershell) first.
 
-There is a third mode, `mkvenv.py --pyqt-type source` which uses a system-wide
-Qt but builds PyQt from source. In most scenarios, this shouldn't be needed.
+There is a third mode, `scripts/mkvenv.py --pyqt-type source` which uses a
+system-wide Qt but builds PyQt from source. In most scenarios, this shouldn't
+be needed.
 
 Creating a wrapper script
 ~~~~~~~~~~~~~~~~~~~~~~~~~
 
-Running `mkvenv.py` does not install a system-wide `qutebrowser` script. You can
-launch qutebrowser by doing:
+Running `scripts/mkvenv.py` does not install a system-wide `qutebrowser`
+script. You can launch qutebrowser by doing:
 
 ----
 .venv/bin/python3 -m qutebrowser
@@ -485,9 +487,9 @@ You can create a simple wrapper script to start qutebrowser somewhere in your
 Updating
 ~~~~~~~~
 
-If you cloned the git repository, run `mkvenv.py --update` which will take care
-of updating the code (via `git pull`) and recreating the environment with the
-newest dependencies.
+If you cloned the git repository, run `scripts/mkvenv.py --update` which will
+take care of updating the code (via `git pull`) and recreating the environment
+with the newest dependencies.
 
 Alternatively, you can update your local copy of the code (e.g. by pulling the
 git repo, or extracting a new version) and the virtualenv should automatically
